--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a{
+  color: white;
+  text-decoration: none;
+}
+
+li>a{
+  color: red;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
